--- a/Pages/main.html
+++ b/Pages/main.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"
-		/>
-		<title>Document</title>
-	</head>
-	<body>
-		<label for="aisu">input:</label>
-		<form id="form1">
-			<input type="text" name="" id="aisu" /> <input type="submit" id="sub" />
-		</form>
-		<span>result:</span>
-		<span id="res"></span>
-	</body>
-	<script>
-		const form = document.querySelector("#form1");
-		const input = document.querySelector("#aisu");
-		const res = document.querySelector("#res");
 
-		form.addEventListener("submit", (e) => {
-			//submitで発火
-			e.preventDefault(); //送信しない
-			res.innerHTML = input.value;
-		});
-	</script>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css" />
+	<title>Document</title>
+</head>
+
+<body>
+	<label for="aisu">input:</label>
+	<form id="form1">
+		<input type="text" name="" id="aisu" /> <input type="submit" id="sub" />
+	</form>
+	<p>result:</p>
+	<div id="resultBlock">
+	</div>
+</body>
+<script>
+	// 変わる
+	const babaNames = ["fofo", "baba"]; // 配列(順序アリ)
+	const imgObj = {
+		fofo: "./image/fofo_27_1.png",
+		baba: "hogehoge"
+	}; // オブジェクト(順序ある？)
+	// オブジェクト名: "画像ファイルへのパス"
+
+	const form = document.querySelector("#form1");
+	const input = document.querySelector("#aisu");
+	const resBlock = document.querySelector("#resultBlock");
+
+	form.addEventListener("submit", (e) => {
+		//submitで発火
+		e.preventDefault(); //送信しない
+		resBlock.innerHTML = "";
+		let aisu = input.value;
+		let aisuText = "<p>" + aisu + "</p>";
+		resBlock.insertAdjacentHTML("afterbegin", aisuText);
+		// カエルゲロゲロ🐸
+		if (aisu.toLowerCase().match(/fofo/)) {
+			console.log("found");
+			let img = '<img src="' + imgObj.fofo + '" />'
+			resBlock.insertAdjacentHTML("beforeend", img);
+		} else {
+			console.log("not found");
+		}
+	});
+
+
+</script>
+
 </html>
