リンク追加

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+	<a href="license.html">ライセンス</a>
 	<label for="aisu">input:</label>
 	<form id="form1">
 		<input type="text" name="" id="aisu" /> <input type="submit" id="sub" />
