ライセンスに関する表記を追加

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<a href="license.html">ライセンス</a>
+
 	<label for="aisu">input:</label>
 	<form id="form1">
 		<input type="text" name="" id="aisu" /> <input type="submit" id="sub" />
@@ -17,6 +17,8 @@
 	<p>result:</p>
 	<div id="resultBlock">
 	</div>
+	<a href="license.html">ライセンスについて</a>
+	<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />この 作品 は <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">クリエイティブ・コモンズ 表示 - 継承 3.0 非移植 ライセンス</a>の下に提供されています。
 </body>
 <script src="./script.js">
 </script>
