--- a/Pages/license.html
+++ b/Pages/license.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./image/BABA.gif" type="image/gif" />
+    <link rel="icon" href="./image/FOFO.gif" type="image/gif" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css"
