正しく検索ができていると思う！

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -43,5 +43,6 @@
       >の下に提供されています。
     </footer>
   </body>
+  <script src="../obj_name_data.json.js"></script>
   <script src="./script.js"></script>
 </html>
