名詞以外の画像データも取り込んだ

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -21,7 +21,7 @@
       <div class="input-block">
         <label for="baba-input">input:</label>
         <form id="form1">
-          <input type="text" name="" id="baba-input" />
+          <input type="text" name="" id="baba-input" autofocus/>
           <input type="submit" id="sub" value="Baba is Search" />
         </form>
       </div>
