githubへのリンク追加

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -31,6 +31,7 @@
       </div>
     </main>
     <footer>
+      <p><a href="https://github.com/mmnk-github/baba-search">ソースコード(GitHub)</a></p>
       <p><a href="license.html">ライセンスについて</a></p>
       <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"
         ><img
