--- a/Pages/main.html
+++ b/Pages/main.html
@@ -15,6 +15,7 @@
   <body>
     <header>
       <h1>Baba Search</h1>
+      <p>入力された文字を並び替えて作ることができるオブジェクトを検索します。</p>
       <hr />
     </header>
     <main>
