よくわからない

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@3_3_nk" />
+    <meta property="og:url" content="https://mmnk-github.github.io/baba-search/Pages/main.html" />
+    <meta property="og:title" content="Baba Search" />
+    <meta property="og:description" content="misosoup" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/mmnk-github/baba-search/main/Pages/FOFOforCARD.png" />
+
     <link rel="icon" href="./image/FOFO.gif" type="image/gif" />
     <link
       rel="stylesheet"
@@ -32,6 +39,7 @@
       </div>
     </main>
     <footer>
+      <p><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="Baba Search" data-hashtags="Baba_Search" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
       <p><a href="https://github.com/mmnk-github/baba-search">ソースコード(GitHub)</a></p>
       <p><a href="license.html">ライセンスについて</a></p>
       <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"
