カードの説明を追加

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -7,7 +7,7 @@
     <meta name="twitter:creator" content="@3_3_nk" />
     <meta property="og:url" content="https://mmnk-github.github.io/baba-search/Pages/main.html" />
     <meta property="og:title" content="Baba Search" />
-    <meta property="og:description" content="misosoup" />
+    <meta property="og:description" content="入力された文字を並び替えて作ることができるオブジェクトを検索します。" />
     <meta property="og:image" content="https://raw.githubusercontent.com/mmnk-github/baba-search/main/Pages/FOFOforCARD.png" />
 
     <link rel="icon" href="./image/FOFO.gif" type="image/gif" />
