ワイルドカードに対応

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -23,6 +23,7 @@
     <header>
       <h1>Baba Search</h1>
       <p>入力された文字を並び替えて作ることができるオブジェクトを検索します。</p>
+      <p>「*」をワイルドカードとして使用できます。</p>
       <hr />
     </header>
     <main>
